# v2i_interface

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  setup.cfg
.github/workflows/: pre-commit.yaml
include/v2i_interface/: eve_vtl_attribute.hpp  eve_vtl_interface_converter.hpp  eve_vtl_specification.hpp
launch/: v2i_interface.launch.xml
src/: eve_vtl_attribute.cpp  vtl_command_converter.cpp
v2i_command_muxer/: CMakeLists.txt  package.xml
v2i_command_muxer/config/: topic_definition.yaml
v2i_command_muxer/include/v2i_command_muxer/: v2i_command_muxer.hpp
v2i_command_muxer/launch/: v2i_command_muxer.launch.xml
v2i_command_muxer/src/: v2i_command_muxer.cpp
v2i_interface/: CMakeLists.txt  README.md  package.xml  udp_control.py  v2i_interface.py
v2i_interface/launch/: v2i_interface.launch.xml  v2i_interface_test.launch.xml
v2i_interface/scripts/: v2i_interface.py
v2i_interface/scripts/test/: v2i_interface_test.py
v2i_tester/: CMakeLists.txt  package.xml
v2i_tester/config/: vtl_test.default.env  vtl_test.id.04.env
v2i_tester/scripts/: generate_json_body.bash  update_vtl_command_msg.bash
vtl_adapter/: CMakeLists.txt  package.xml
vtl_adapter/include/v2i_interface/: eve_vtl_attribute.hpp  eve_vtl_interface_converter.hpp  vtl_command_converter.hpp
vtl_adapter/launch/: vtl_adapter.launch.xml
vtl_adapter/src/: eve_vtl_attribute.cpp  eve_vtl_interface_converter.cpp  interface_converter_data_pipeline.cpp  self_approval_timer.cpp  vtl_adapter.cpp  vtl_command_converter.cpp  vtl_state_converter.cpp
(+9 files in other folders)
